# VneruoTK

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/for_claude/: progress.md
docs/for_claude/api_design/api_IOandData/: api_cons.py  api_load_save.py  api_path.py  spec_data.md  spec_io-ephys.md
docs/for_claude/api_design/api_meta/: spec-meta.md
docs/for_user/: 2026-04-06_io_data_implementation.md  BaseData.md  MIGRATION_GUIDE.md  ephys_structure.md  vision.md
src/vneurotk/: __init__.py
src/vneurotk/io/: __init__.py  loader.py  path.py
src/vneurotk/neuro/: __init__.py  base.py  info.py
src/vneurotk/utils/: __init__.py  mne_utils.py  time.py
src/vneurotk/vision/: __init__.py  registry.py  representation.py  stimulus_features.py  visual_representations.py
src/vneurotk/vision/extractor/: __init__.py  extractor.py  policy.py  selector.py
src/vneurotk/vision/extractor/backend/: __init__.py  base.py  thingsvision_backend.py  timm_backend.py  transformers_backend.py
src/vneurotk/viz/: data.py  utils.py
src/vneurotk/viz/cebra/: __init__.py  _utils.py  sampling.py  trial_sampling.py
tests/: test_io_and_data.py  test_vision.py
