[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vneurotk"
dynamic = ["version"]
description = "Unified toolkit for visual neuroscience"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cebra==0.6.0",
    "h5py>=3.16.0",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "mne>=1.11.0",
    "mne-bids>=0.17.0",
    "numpy",
    "pandas>=2.3.3",
    "pillow",
    "sentencepiece>=0.2.1",
    "thingsvision>=1.4.4",
    "timm",
    "torch>=2.4.1",
    "transformers",
    "trialcebra>=0.0.1a2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/vneurotk"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4",
    "ipykernel>=7.2.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit",
]
